[package]
name = "wolfram-ast"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Rust on Rails!"
repository = "https://github.com/oovm/rust-on-rails"
documentation = "https://docs.rs/ror"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
pratt = "0.4.0"
yggdrasil-rt = "0.0.*"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
