[package]
name = "wolfram-ast"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "A wolfram language parser written in pure rust"
repository = "https://github.com/oovm/wolfram-parser"
documentation = "https://docs.rs/wolfram-ast"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
serde = { version = "1.0.190", optional = true }
pratt = { version = "0.4.0", optional = true }
yggdrasil-rt = { version = "0.0.*", optional = true }


[dependencies.wolfram-error]
version = "0.0.*"
path = "../wolfram-error"

[dev-dependencies]

[features]
default = ["parser"]
serde = ["dep:serde"]
parser = ["yggdrasil-rt", "pratt"]

[package.metadata.docs.rs]
all-features = true
